DataAccess updates to data access objects